@@ -1,3 +1,12 @@
+2006-03-23  Ronaldo Maia,,,  <romaia@async.com.br>
+
+	reviewed by: jdahlin: 
+
+	* kiwi/ui/proxy.py: allow None to be passed to proxy.set_model
+	* kiwi/ui/widgets/checkbutton.py:
+	* kiwi/ui/widgets/radiobutton.py:
+	Allow None to be passed to update
+
 2006-03-23  Johan Dahlin  <jdahlin@async.com.br>
 
 	* kiwi/datatypes.py: Move setlocale() call to __init__.py
